changed to blisk

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Business Frontpage - Start Bootstrap Template</title>
+    <title>Blisk - next-gen robotics</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -23,20 +23,12 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="#"><img src="images/C-Robotics-Logo-small-white.png"</a>
+        <a class="navbar-left" href="#"><img src="images/blisk-logo-small.svg"</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Home
-                <span class="sr-only">(current)</span>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
-            </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Contact</a>
             </li>
@@ -50,7 +42,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12">
-            <h1 class="display-3 text-center text-dark mt-4">Creating a mundane-less world</h1>
+            <h1 class="display-3 text-center text-dark mt-4">Creating a mundane-free world</h1>
           </div>
         </div>
       </div>
@@ -62,7 +54,7 @@
       <div class="row">
         <div class="col-sm-8">
           <h2 class="mt-4">What We Do</h2>
-          <p>We, at C-Robotics, are creating the next generation of robots to perform the mundane tasks in the world and create a happier place to live in. Our first business focus is on the industrial cleaning industry.</p>
+          <p>We, at Blisk, are creating the next generation of robots to perform the mundane tasks in the world and create a happier place to live in. Our first business focus is on the industrial cleaning industry.</p>
           <p></p>
           <p>
             <a class="btn btn-primary btn-lg" href="#">Get notified of beta &raquo;</a>
@@ -71,7 +63,7 @@
         <div class="col-sm-4">
           <h2 class="mt-4">Contact Us</h2>
           <address>
-            <strong>C-Robotics</strong>
+            <strong>Blisk</strong>
             <br>Haifa
             <br>Israel
             <br>
@@ -87,7 +79,7 @@
       </div>
       <!-- /.row -->
 
-      <div class="row">
+      <!-- <div class="row">
         <div class="col-sm my-4">
           <div class="card">
             <img class="card-img-top" src="http://placehold.it/300x200" alt="">
@@ -114,7 +106,7 @@
         </div>
         
 
-      </div>
+      </div> -->
       <!-- /.row -->
 
     </div>
@@ -123,7 +115,7 @@
     <!-- Footer -->
     <footer class="py-5 bg-dark">
       <div class="container">
-        <p class="m-0 text-center text-white">Copyright &copy; C-Robotics 2018</p>
+        <p class="m-0 text-center text-white">Copyright &copy; Blisk 2018</p>
       </div>
       <!-- /.container -->
     </footer>
