--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
       <div class="container">
-        <a class="navbar-left" href="#"><img src="images/blisk-logo-small.svg"</a>
+        <a class="navbar-left" href="#"><img src="images/blisk-logo_v2-small.svg"</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
