--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
-            <!-- <li class="nav-item">
+            <li class="nav-item">
               <a class="nav-link" href="#">Contact</a>
-            </li> -->
+            </li>
           </ul>
         </div>
       </div>
