update to live website

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
       <div class="container">
-        <a class="navbar-left" href="#"><img src="images/blisk-logo_v2-small.svg"></a>
+        <a class="navbar-left" href="#"><img src="images/C-Robotics-Logo-small-white.png"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -42,7 +42,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12">
-            <h1 class="display-3 text-center text-dark mt-4">Creating a mundane-free world</h1>
+            <h1 class="display-3 text-center text-dark mt-4">Simplicity for the everyday tasks</h1>
           </div>
         </div>
       </div>
@@ -54,7 +54,7 @@
       <div class="row">
         <div class="col-sm-8">
           <h2 class="mt-4">What We Do</h2>
-          <p>We, at Blisk, are creating the next generation of robots to perform the mundane tasks in the world and create a happier place to live in. Our first business focus is on the industrial cleaning industry.</p>
+          <p>We, at C-Robotics, are creating the next generation of robots to perform the mundane tasks in the world and create a happier place to live in. Our first business focus is on the industrial cleaning industry.</p>
           <p></p>
           <p>
             <a class="btn btn-primary btn-lg" href="#">Get notified of beta &raquo;</a>
@@ -63,17 +63,17 @@
         <div class="col-sm-4">
           <h2 class="mt-4">Contact Us</h2>
           <address>
-            <strong>Blisk</strong>
+            <strong>C-Robotics</strong>
             <br>Haifa
             <br>Israel
             <br>
           </address>
           <address>
-            <abbr title="Phone">P:</abbr>
+            <!-- <abbr title="Phone">P:</abbr>
             +972 (4) 24588542
-            <br>
+            <br> -->
             <abbr title="Email">E:</abbr>
-            <a href="mailto:#">shaihi@gmail.com</a>
+            <a href="mailto:#">info@c-robotics.info</a>
           </address>
         </div>
       </div>
@@ -115,7 +115,7 @@
     <!-- Footer -->
     <footer class="py-5 bg-dark">
       <div class="container">
-        <p class="m-0 text-center text-white">Copyright &copy; Blisk 2018</p>
+        <p class="m-0 text-center text-white">Copyright &copy; C-Robotics 2018</p>
       </div>
       <!-- /.container -->
     </footer>
