removed blisk and added gform to accept emails

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Blisk - next-gen robotics</title>
+    <title>C-Robotics - next-gen robotics</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -57,7 +57,7 @@
           <p>We, at C-Robotics, are creating the next generation of robots to perform the mundane tasks in the world and create a happier place to live in. Our first business focus is on the industrial cleaning industry.</p>
           <p></p>
           <p>
-            <a class="btn btn-primary btn-lg" href="#">Get notified of beta &raquo;</a>
+            <a class="btn btn-primary btn-lg" href="https://goo.gl/forms/RcO5bHy5cO0OcXGP2">Get notified of beta &raquo;</a>
           </p>
         </div>
         <div class="col-sm-4">
